--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-    ]
-  }
+  "version" : 2,
+  "builds" : [
+    {
+      "src" : "form.html",
+      "use" : "@vercel/static"
+    }
+  ]
+}
